# ZigCFG

./: .gitignore  CMakeLists.txt  README.md
benchmark/: vul.json
frontend/src/: main.cpp
lib/include/ZigCFG/Cfg/: Cfg.h  Elements.h
lib/src/Cfg/: Cfg.cpp
temp/frontend/include/: CommandLineInterface.h  IntervalLog.h  ScriptExporter.h
temp/frontend/src/: CommandLineInterface.cpp  IntervalLog.cpp  ScriptExporter.cpp
temp/lib/include/ZigCFG/: Api.h
temp/lib/include/ZigCFG/Cfg/: Block.h  Cfg.h
temp/lib/include/ZigCFG/SyntaxTree/: HashNode.h  MerkleTree.h  ModifiedTree.h  SourceCode.h  VirtualNode.h  VirtualNode.hpp  VirtualTree.h
temp/lib/include/ZigCFG/TreeDiff/: ByteLFramework.h  DiffInkFramework.h  DiffInkMatcher.h  EditAction.h  Framework.h  LGMatcherFramework.h
temp/lib/include/ZigCFG/TreeDiff/GumTree/: Comparator.h  Framework.h  GreedyBottomUp.h  GreedyTopDown.h  SimpleBottomUp.h
temp/lib/include/ZigCFG/Utils/: Lcs.h  Lcs.hpp  TextDiff.h  Wrapper.h
temp/lib/src/Cfg/: Cfg.cpp
temp/lib/src/SyntaxTree/: HashNode.cpp  MerkleTree.cpp  ModifiedTree.cpp  SourceCode.cpp  VirtualTree.cpp  VritualNode.cpp
temp/lib/src/TreeDiff/: ByteLFramework.cpp  DiffInkFramework.cpp  DiffInkMatcher.cpp  Framework.cpp  LGMatcherFramework.cpp
temp/lib/src/TreeDiff/GumTree/: Comparator.cpp  Framework.cpp  GreedyBottomUp.cpp  GreedyTopDown.cpp  SimpleBottomUp.cpp
temp/lib/src/TreeDiff/Metric/: ChawatheSimilarity.cpp  DiceSimilarity.cpp
temp/lib/src/TreeDiff/Recovery/: OptimalRecovery.cpp  SimpleRecovery.cpp
temp/lib/src/Utils/: TextDiff.cpp
(+3 files in other folders)
